testsuite/tests/package/package06e.hs
module Package06e where
import GHC.Hs.Types
import UniqFM
